updated the website

--- a/bio/projects.html
+++ b/bio/projects.html
@@ -63,10 +63,10 @@ MathJax.Hub.Config({
 <h3>Optimization-based approaches vs data-driven frameworks</h3>
 <p>Reviewing the different algorithms in each one of these two categories and comparing the cons and pros of each one can pave the way for designing the next-generation of constraint-based methods. Do living organisms always behave extremely optimal or can they be described by a set of constraints and rules instead of a final goal?</p>
 <h3>Integration of metabolite concentrations in metabolic network models</h3>
-<p>In many real-world scenarios, the available data is in the form of metabolite densities instead of flux measurements, for instance, the glucose concentration in a bacterial culture medium or biomarkers in the blood of a cancer patient. What is the state-of-the-art in the integration of metabolite concentration and reaction flux information?</p>
+<p>In many real-world scenarios, the available data is in the form of metabolite concentrations instead of flux measurements, for instance, the glucose concentration in a bacterial culture medium or biomarkers in the blood of a cancer patient. What is the state-of-the-art in the integration of metabolite concentration and reaction flux information?</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-02 10:03:17 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-10-02 10:08:33 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
