--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -57,9 +57,9 @@ Videos of all in-class lectures will be available on <a href="http://ocw.sharif.
 The TAs will offer informal working sessions, that will
 also serve as their office hours, starting the second week of class. Attendance is not required. </p>
 <ul>
-<li><p>Mohammad Hosein Moteallehi: Mondays, 5:30&ndash;6:30 pm, via <a href="https://vc.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a></p>
+<li><p>Mohammad Hosein Moteallehi: Saturdays, 5:30&ndash;6:30 pm, via <a href="https://vc.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a></p>
 </li>
-<li><p>Amir Hosein Hematyar: Saturdays, 5:30&ndash;6:30 pm, via <a href="https://vc.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a>
+<li><p>Kiarash Banihashem: Mondays, 5:30&ndash;6:30 pm, via <a href="https://vc.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a>
 </p>
 </li>
 </ul>
@@ -107,7 +107,7 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 <p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-04 17:20:55 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-10-10 13:06:05 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
