--- a/bio/contact.html
+++ b/bio/contact.html
@@ -56,12 +56,12 @@ MathJax.Hub.Config({
 <ul>
 <li><p>Mohammad Hosein Moteallehi, Biology TA</p>
 </li>
-<li><p>Kiarash Banihashem, Optimization TA</p>
+<li><p>Ehsan Zangeneh, Optimization TA</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-10 13:06:06 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-10-10 20:10:29 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
