updated the website

--- a/bio/readings.html
+++ b/bio/readings.html
@@ -56,7 +56,12 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 3rd week (10/9/20): Chapter 3-Flux Balance Analysis and LP Problems.</p>
 </li>
-<li><p>By the end of 4rd week (10/16/20): <a href="IPM/presentation.pdf">Applications of convex optimization in metabolic network analysis</a>.
+<li><p>By the end of 4th week (10/16/20): QFCA from <a href="presentation.pdf">Applications of convex optimization in metabolic network analysis</a>.</p>
+</li>
+<li><p>By the end of 5th week (10/23/20): Metabolic network reductions from <a href="presentation.pdf">Applications of convex optimization in metabolic network analysis</a>.</p>
+</li>
+<li><p>By the end of 6th week (10/30/20): Chapter 4-Modeling with Binary Variables and MILP Fundamentals.
+
 
 
 
@@ -65,7 +70,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-12 20:59:35 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-10-25 18:46:01 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
