--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -74,7 +74,7 @@ also serve as their office hours, starting the second week of class. Attendance 
 </li>
 <li><p><i>Milestone report</i>. early draft of at most 3 pages (including annexes and figures) + next steps and intended experiments + contributions of each team member</p>
 </li>
-<li><p><i>Final Writeup</i>. report (maximum 5 pages long) + link to the GitHub repository + contributions of each team member</p>
+<li><p><i>Final writeup</i>. report (maximum 5 pages long) + link to the GitHub repository + contributions of each team member</p>
 </li></ol>
 </li>
 <li><p><b>Grading:</b> Homework 30%, project 70%. These weights are approximate; we reserve the right to change them later.<br />
@@ -107,7 +107,7 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 <p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-12 20:59:34 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-10-25 18:46:00 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
