--- a/bio/readings.html
+++ b/bio/readings.html
@@ -60,7 +60,12 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 5th week (10/23/20): Metabolic network reductions from <a href="presentation.pdf">Applications of convex optimization in metabolic network analysis</a>.</p>
 </li>
-<li><p>By the end of 6th week (10/30/20): Chapter 4-Modeling with Binary Variables and MILP Fundamentals.
+<li><p>By the end of 6th week (10/30/20): Chapter 4-Modeling with Binary Variables and MILP Fundamentals.</p>
+</li>
+<li><p>By the end of 7th week (11/6/20): Chapter 5-Thermodynamic Analysis of Metabolic Networks.</p>
+</li>
+<li><p>By the end of 8th week (11/13/20): Chapter 6-Resolving Network Gaps and Growth Prediction Inconsistencies in Metabolic Networks.
+
 
 
 
@@ -70,7 +75,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-25 18:46:01 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-11-05 16:43:28 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
