updated the website

--- a/bio/readings.html
+++ b/bio/readings.html
@@ -64,7 +64,10 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 7th week (11/6/20): Chapter 5-Thermodynamic Analysis of Metabolic Networks.</p>
 </li>
-<li><p>By the end of 8th week (11/13/20): Chapter 6-Resolving Network Gaps and Growth Prediction Inconsistencies in Metabolic Networks.
+<li><p>By the end of 8th week (11/13/20): Chapter 6-Resolving Network Gaps and Growth Prediction Inconsistencies in Metabolic Networks.</p>
+</li>
+<li><p>By the end of 9th week (11/20/20): Chapter 7-Identification of Connected Paths to Target Metabolites.
+
 
 
 
@@ -75,7 +78,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-11-05 16:43:28 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-11-12 15:23:34 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
