updated the website

--- a/bio/home.html
+++ b/bio/home.html
@@ -60,14 +60,16 @@ MathJax.Hub.Config({
 </li>
 <li><p>The deadline to join a team and submit the proposal's title is by the end of third week. Afterward, you have two more weeks to work on completing the one-page proposal. Don't forget to introduce yourself to fellow students on Quera in order to get to know each other better and find teammates. </p>
 </li>
-<li><p>Welcome to week 6, and good job everyone on submitting your proposals. The milestone report is due four weeks from now. In the first lecture after the deadline, each team will give a ten-minute presentation on their progress. 
+<li><p>Welcome to week 6, and good job everyone on submitting your proposals. The milestone report is due four weeks from now. In the first lecture after the deadline, each team will give a ten-minute presentation on their progress.</p>
+</li>
+<li><p>Welcome to week 12, and good job everyone on presenting your project milestone reports. As we begin to wrap up covering the few remaining chapters of the textbook, good luck with polishing and finalizing your projects!
 
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-11-18 15:22:16 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-12-06 08:10:20 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
