--- a/bio/readings.html
+++ b/bio/readings.html
@@ -68,10 +68,19 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 9th week (11/20/20): Chapter 7-Identification of Connected Paths to Target Metabolites.</p>
 </li>
-<li><p>By the end of 10th week (11/27/20): Chapter 8-Computational Strain Design.
+<li><p>By the end of 10th week (11/27/20): Project Milestone Report.</p>
+</li>
+<li><p>By the end of 11th week (12/4/20): Project Milestone Report.</p>
+</li>
+<li><p>By the end of 12th week (12/11/20): Chapter 8-Computational Strain Design.</p>
+</li>
+<li><p>By the end of 13th week (12/18/20): Chapter 9-NLP Fundamentals.</p>
+</li>
+<li><p>By the end of 14th week (12/25/20): Chapter 10-NLP Applications in Metabolic Networks.</p>
+</li>
+<li><p>By the end of 15th week (1/1/21): Chapter 11-MINLP Fundamentals and Applications.
 
-
-
+That finishes up the formal reading assignments. Happy new year!
 
 
 
@@ -80,7 +89,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-11-18 15:22:17 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-12-06 08:10:21 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
