updated the website

--- a/bio/readings.html
+++ b/bio/readings.html
@@ -78,19 +78,19 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 14th week (12/25/20): Chapter 10-NLP Applications in Metabolic Networks.</p>
 </li>
-<li><p>By the end of 15th week (1/1/21): Chapter 11-MINLP Fundamentals and Applications.</p>
+<li><p>By the end of 15th week (1/1/21): Chapter 11-MINLP Fundamentals and Applications.
+</p>
 </li>
 </ol>
 <div class="infoblock">
 <div class="blockcontent">
-<p>That finishes up the formal reading assignments. Happy new year!
-
+<p>
 
 
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-06 08:14:55 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-12-06 08:16:13 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
