--- a/bio/readings.html
+++ b/bio/readings.html
@@ -50,8 +50,6 @@ MathJax.Hub.Config({
 <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>textbook</a>. We'll be adding to them over the semester.<br /></p>
 </td></tr></table>
 <ol>
-<li><p>By the end of 1st week (9/25/20): Chapter 1-Mathematical Optimization Fundamentals.</p>
-</li>
 <li><p>By the end of 2nd week (10/2/20): Chapter 2-LP and Duality Theory.</p>
 </li>
 <li><p>By the end of 3rd week (10/9/20): Chapter 3-Flux Balance Analysis and LP Problems.</p>
@@ -78,10 +76,7 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 14th week (12/25/20): Chapter 10-NLP Applications in Metabolic Networks.</p>
 </li>
-<li><p>By the end of 15th week (1/1/21): Chapter 11-MINLP Fundamentals and Applications.
-
-
-
+<li><p>By the end of 15th week (1/1/21): Chapter 11-MINLP Fundamentals and Applications.<br />
 That finishes up the formal reading assignments. Happy new year!
 
 
@@ -91,7 +86,7 @@ That finishes up the formal reading assignments. Happy new year!
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-06 08:16:55 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-12-06 08:20:19 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
