--- a/bio/readings.html
+++ b/bio/readings.html
@@ -77,7 +77,7 @@ MathJax.Hub.Config({
 <li><p>By the end of 14th week (12/25/20): Chapter 10-NLP Applications in Metabolic Networks.</p>
 </li>
 <li><p>By the end of 15th week (1/1/21): Chapter 11-MINLP Fundamentals and Applications.<br />
-That finishes up the formal reading assignments. Happy new year!
+<br />That finishes up the formal reading assignments. Happy new year!
 
 
 
@@ -86,7 +86,7 @@ That finishes up the formal reading assignments. Happy new year!
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-06 08:20:19 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-12-06 08:22:14 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
