--- a/bio/projects.html
+++ b/bio/projects.html
@@ -29,6 +29,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="https://vc.sharif.edu/ch/mtefagh">Webinars</a></div>
 <div class="menu-item"><a href="http://ocw.sharif.edu/teacher/id//128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html">OCW</a></div>
 <div class="menu-category">Assignments</div>
+<div class="menu-item"><a href="homework.html">Homework</a></div>
 <div class="menu-item"><a href="readings.html" class="current">Readings</a></div>
 <div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-category">COBRA*</div>
@@ -68,7 +69,7 @@ MathJax.Hub.Config({
 <p>In many real-world scenarios, the available data is in the form of metabolite concentrations instead of flux measurements, for instance, the glucose concentration in a bacterial culture medium or biomarkers in the blood of a cancer patient. What is the state-of-the-art in the integration of metabolite concentration and reaction flux information?</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-06 08:22:14 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-12-11 08:13:29 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
