updated the website

--- a/bio/projects.html
+++ b/bio/projects.html
@@ -67,9 +67,15 @@ MathJax.Hub.Config({
 <p>Reviewing the different algorithms in each one of these two categories and comparing the cons and pros of each one can pave the way for designing the next-generation of constraint-based methods. Do living organisms always behave extremely optimal or can they be described by a set of constraints and rules instead of a final goal?</p>
 <h3>Integration of metabolite concentrations in metabolic network models</h3>
 <p>In many real-world scenarios, the available data is in the form of metabolite concentrations instead of flux measurements, for instance, the glucose concentration in a bacterial culture medium or biomarkers in the blood of a cancer patient. What is the state-of-the-art in the integration of metabolite concentration and reaction flux information?</p>
+<h2>Previous projects</h2>
+<h3><a href="https://github.com/mohammad-kashkooli/metabolomics" target=&ldquo;blank&rdquo;>Genome-scale reconstruction and gap filling of the metabolic network of glioblastoma multiforme to detect the protective role of specific genes overexpression based on flux inhibition analysis and subnetwork detection to discover new drug targets</a></h3>
+<p>Nahid Sarem Sangari, Mohammad Kashkooli, Mahdi Malekpour</p>
+<h3><a href="https://github.com/marzie-abdolhamdi/Metabolic-network" target=&ldquo;blank&rdquo;>Sparsity pattern of the stoichiometry matrix of RECOND3D model</a></h3>
+<p>Marzie Abdolhamdi, Saba Hosseini, Niloofar Latifian
+</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-28 07:50:02 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-06 14:09:49 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
