updated the website

--- a/bio/home.html
+++ b/bio/home.html
@@ -63,14 +63,15 @@ MathJax.Hub.Config({
 </li>
 <li><p>Welcome to week 6, and good job everyone on submitting your proposals. The milestone report is due four weeks from now. In the first lecture after the deadline, each team will give a ten-minute presentation on their progress.</p>
 </li>
-<li><p>Welcome to week 12, and good job everyone on presenting your project milestone reports. As we begin to wrap up covering the few remaining chapters of the textbook, good luck with polishing and finalizing your projects!
-
+<li><p>Welcome to week 12, and good job everyone on presenting your project milestone reports. As we begin to wrap up covering the few remaining chapters of the textbook, good luck with polishing and finalizing your projects!</p>
+</li>
+<li><p>We are excited to see the accomplishments of your projects this semester!
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-06 14:09:48 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-06 14:21:32 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
