--- a/bio/projects.html
+++ b/bio/projects.html
@@ -49,6 +49,7 @@ MathJax.Hub.Config({
 <img src="project.png" alt="Project" width="100px" />&nbsp;</td>
 <td align="left"><p>We will update this page with more information about the project ideas soon.<br /></p>
 </td></tr></table>
+<h2>Project ideas</h2>
 <h3>Flux inhibition analysis</h3>
 <p>Chapter 5 of <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> is an incomplete work that needs an efficient implementation and further analysis of biological fidelity through investigating examples in real-world genome-scale models.</p>
 <h3>Sparsity pattern of stoichiometry matrix</h3>
@@ -75,7 +76,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-06 14:09:49 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-06 14:21:34 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
