--- a/bio/readings.html
+++ b/bio/readings.html
@@ -51,6 +51,8 @@ MathJax.Hub.Config({
 <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>textbook</a>. We'll be adding to them over the semester.<br /></p>
 </td></tr></table>
 <ol>
+<li><p>By the end of 1st week (9/25/20): Chapter 1-Mathematical Optimization Fundamentals.</p>
+</li>
 <li><p>By the end of 2nd week (10/2/20): Chapter 2-LP and Duality Theory.</p>
 </li>
 <li><p>By the end of 3rd week (10/9/20): Chapter 3-Flux Balance Analysis and LP Problems.</p>
@@ -87,7 +89,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-06 14:09:49 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-06 14:21:34 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
