updated the website

--- a/bio/projects.html
+++ b/bio/projects.html
@@ -47,7 +47,7 @@ MathJax.Hub.Config({
 </div>
 <table class="imgtable"><tr><td>
 <img src="project.png" alt="Project" width="100px" />&nbsp;</td>
-<td align="left"><p>We will update this page with more information about the project ideas soon.<br /></p>
+<td align="left"><p>We will update this page with more information about the project topics soon.<br /></p>
 </td></tr></table>
 <h2>Project ideas</h2>
 <h3>Flux inhibition analysis</h3>
@@ -72,11 +72,13 @@ MathJax.Hub.Config({
 <h3><a href="https://github.com/mohammad-kashkooli/metabolomics" target=&ldquo;blank&rdquo;>Genome-scale reconstruction and gap filling of the metabolic network of glioblastoma multiforme to detect the protective role of specific genes overexpression based on flux inhibition analysis and subnetwork detection to discover new drug targets</a></h3>
 <p>Nahid Sarem Sangari, Mohammad Kashkooli, Mahdi Malekpour</p>
 <h3><a href="https://github.com/marzie-abdolhamdi/Metabolic-network" target=&ldquo;blank&rdquo;>Sparsity pattern of the stoichiometry matrix of RECOND3D model</a></h3>
-<p>Marzie Abdolhamdi, Saba Hosseini, Niloofar Latifian
+<p>Marzie Abdolhamdi, Saba Hosseini, Niloofar Latifian</p>
+<h3><a href="MathBioReport1.pdf" target=&ldquo;blank&rdquo;>Dynamic optimization approach for genome-scale investigation of metabolic reprogramming</a></h3>
+<p>Fateme Safaeifard, Parisa Vosooq Nejad, Saeed Aghamiri
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-06 14:21:34 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-10 17:09:03 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
