updated the website

--- a/bio/contact.html
+++ b/bio/contact.html
@@ -27,6 +27,7 @@ MathJax.Hub.Config({
 <div class="menu-category">Course materials</div>
 <div class="menu-item"><a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902/">Textbook</a></div>
 <div class="menu-item"><a href="https://vc.sharif.edu/ch/mtefagh">Webinars</a></div>
+<div class="menu-item"><a href="slides.pdf">Lecture&nbsp;slides</a></div>
 <div class="menu-category">Assignments</div>
 <div class="menu-item"><a href="homework.html">Homework</a></div>
 <div class="menu-item"><a href="readings.html">Readings</a></div>
@@ -61,7 +62,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-13 13:52:06 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-11-22 21:48:11 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
